[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gym-laser"
version = "0.1.0"
description = "A gymnasium environment for laser pulse shaping"
authors = [{name = "Francesco Capuano", email="fc.francescocapuano@gmail.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["gym", "reinforcement learning", "physics", "gymnasium"]

dependencies = [
    "gymnasium[other]==1.0.0",
    "numpy==2.2.6",
    "matplotlib==3.10.3",
    "pandas==2.3.1",
    "scipy==1.16.0",
    "torch==2.7.1",
    "pygame==2.6.1",
    "moviepy==1.0.3",
    "pillow==11.3.0",
    "line_profiler==4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0"
]

[project.urls]
Homepage = "https://github.com/fracapuano/gym-laser"
Repository = "https://github.com/fracapuano/gym-laser"
Issues = "https://github.com/fracapuano/gym-laser/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["gym_laser*"]

[tool.setuptools.package-data]
gym_laser = ["data/*.txt", "data/*.csv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]